# cursor-hackathon-2026-company-brain-rag-and-knowledge-graph

./: README.md  build_zip.sh  end_to_end.mermaid  inner_graph_diagram.mermaid
.cursor/skills/docker-usage/: SKILL.md
.cursor/skills/flutter-dart-expert/: SKILL.md
.cursor/skills/langchain-dependencies/: SKILL.md
.cursor/skills/langchain-fundamentals/: SKILL.md
.cursor/skills/langchain-middleware/: SKILL.md
.cursor/skills/langchain-rag/: SKILL.md
.cursor/skills/langgraph-cli/: SKILL.md
.cursor/skills/langgraph-fundamentals/: SKILL.md  reference.md
.cursor/skills/langgraph-human-in-the-loop/: SKILL.md
.cursor/skills/langgraph-persistence/: SKILL.md
.cursor/skills/railway-deploy/: SKILL.md
backend/: .gitignore  kb_index.py  main.py  pyproject.toml  ruff.conf
backend/agent/: __init__.py  api_tools.py  artifacts.py  graph.py  guardrails.py  kb.py  llm.py  logging_utils.py  router.py  sources.py
backend/data/kb_index/: index.faiss  index.pkl
backend/data/kb_index/remote-qwen3_embedding_8b/: index.faiss  index.pkl
backend/static/web/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.js  manifest.json  version.json
backend/static/web/assets/: NOTICES
docs/: useful_links.org
examples/: guardrails.py  regolo.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/core/: theme.dart
frontend/lib/features/chat/data/: ask_repository.dart
frontend/lib/features/chat/domain/: ask_result.dart  (+1 more)
frontend/test/: widget_test.dart
frontend/web/: index.html
tools/: build_kb_index.py  test_railway_endpoint.py
(+4 files in other folders)
