[project]
name = "company-brain-starter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    # --- Agent stack: LangChain + LangGraph over the Regolo (OpenAI-compatible) API ---
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langchain-openai>=0.3.0",
    "numpy>=2.0.0",
    # --- Suggested extras: uncomment what you need, then run `uv sync` ---
    # Binary artifact generation (docx / pptx / pdf / xlsx questions):
    # "python-docx>=1.2.0",
    # "python-pptx>=1.0.2",
    # "fpdf2>=2.8.7",
    # "openpyxl>=3.1.5",         # Excel (.xlsx) workbooks
]
